# Taipei-City-Dashboard-FE

data/: cp_map_data  pyproject.toml
data/age/: process.py
data/burn/: process.py  ps00036mc.csv
data/fire/: 153.json  process.py
data/flood/: README.md  convert-flood.py  fetch.py  flood-108.json  flood-109.json  flood-110.json  flood-111.json  flood-112.json  floods-history.json  floods.geojson  floods.json  gen_history_data.py  process.py
data/flood/geojsons/: 20190613_132501.geojson  20190613_132503.geojson  20190613_132505.geojson  20190613_132509.geojson  20190613_132512.geojson  20190613_132513.geojson  20190613_132516.geojson  20190613_132517.geojson  20190613_132522.geojson  20190613_132524.geojson  20190830_090001.geojson  20190830_090002.geojson  20190830_090003.geojson  20190830_090004.geojson  20190830_090005.geojson  20190830_090006.geojson  20190830_090007.geojson  20190830_090008.geojson  20190830_100001.geojson  20190830_100002.geojson  20190830_100003.geojson  20190830_100004.geojson  20190830_100005.geojson  20190830_100006.geojson  20190830_100007.geojson  20190830_100008.geojson  20190830_100009.geojson  20190830_100011.geojson  20190830_100012.geojson  20190830_100013.geojson  20190830_100014.geojson  20190830_100015.geojson  20190830_100016.geojson  (+111 more)
data/hospital/: README.md  hospitals.geojson  process.py  台北市醫院清冊.csv  臺北市公私立醫院病床數統計.csv
data/house/: 331.json  921.json  README.md  earthquake_listed_houses.geojson  failed  failed.json  fetch.py  gen_chartdata.py  houses.json  listed_building.json  process.py  to_geojson.py
src/: main.js
(+158 files in other folders)
